# private-pdf-translator

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  HANDOVER.md  README.md  SPEC.md  docker-compose.yml  doppler.yaml  main.py  pipeline.py  prompt.md  prompt_en.md  pyproject.toml  requirements.txt  translate.sh  watcher.py
.github/workflows/: publish.yml
docs/: pipeline.excalidraw
