[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-pdf-translator"
version = "1.0.6"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "deepl",
    "pymupdf",
    "pytesseract",
    "reportlab",
    "Pillow",
    "presidio-analyzer",
    "presidio-anonymizer",
    "spacy",
    "langdetect",
]

[project.scripts]
pdf-translate = "main:main"

[tool.hatch.build.targets.wheel]
include = [
    "pipeline.py",
    "main.py",
    "prompt.md",
    "prompt_en.md",
]